objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Business_Unit_Group__c</fullName>
        <label>Business Unit Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Core SW</fullName>
                </value>
                <value>
                    <fullName>eXW Hardware</fullName>
                </value>
                <value>
                    <fullName>Interactive Development</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>Applications</fullName>
                </value>
                <value>
                    <fullName>Payment Solution</fullName>
                </value>
                <value>
                    <fullName>Connectivity Services</fullName>
                </value>
                <value>
                    <fullName>WiFi Services</fullName>
                </value>
                <value>
                    <fullName>TV/Media</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>IFE Services</fullName>
                </value>
                <value>
                    <fullName>Line Maintenance</fullName>
                </value>
                <value>
                    <fullName>WISP</fullName>
                </value>
                <value>
                    <fullName>Portal Moving Map</fullName>
                </value>
                <value>
                    <fullName>ZeroTouch</fullName>
                </value>
                <value>
                    <fullName>eXW Services</fullName>
                </value>
                <value>
                    <fullName>WiFi Hardware</fullName>
                </value>
                <value>
                    <fullName>Mobility Hardware</fullName>
                </value>
                <value>
                    <fullName>Maintenance Services</fullName>
                </value>
                <value>
                    <fullName>Media Creative Services</fullName>
                </value>
                <value>
                    <fullName>IFE Structures</fullName>
                </value>
                <value>
                    <fullName>Technical Publications</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>IFE SeatEnd HW</fullName>
                </value>
                <value>
                    <fullName>IFE HeadEnd HW</fullName>
                </value>
                <value>
                    <fullName>Cell Modem Hardware</fullName>
                </value>
                <value>
                    <fullName>OEM SFE (CSS, CMS)</fullName>
                </value>
                <value>
                    <fullName>Harnesses</fullName>
                </value>
                <value>
                    <fullName>Cell Modem Services</fullName>
                </value>
                <value>
                    <fullName>Spares</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id_Product_Code__c</fullName>
        <description>Use Product code as external Id</description>
        <externalId>true</externalId>
        <label>External Id Product Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Placeholder_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This part is a placeholder.</description>
        <label>Is Placeholder Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_AdditionalInfo1__c</fullName>
        <label>Additional Info 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_AdditionalInfo2__c</fullName>
        <label>Additional Info 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_BillToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account lookup specific to Boingo &amp; iPass Usage products in Connectivity.</description>
        <label>Bill To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Business_PIllar__c</fullName>
        <label>Business PIllar</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Pillar</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_CCC_Suffix__c</fullName>
        <label>CCC Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WI</fullName>
                </value>
                <value>
                    <fullName>GM</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>EX</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>ZT</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>PH</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>OP</fullName>
                </value>
                <value>
                    <fullName>BUNDLE PRODUCT</fullName>
                </value>
                <value>
                    <fullName>ZZ</fullName>
                </value>
                <value>
                    <fullName>SW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_CPL_PPL_Mapping__c</fullName>
        <label>CPL/PPL Mapping</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CPL_PPL_Mapping</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_CPQCalculateRevShare__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if CPQ should be calculating revshare or clearing out revshare % from configuration</description>
        <label>CPQ Calculate RevShare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_CPQExcludeQuoteTotals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if product is included in custom Quote Totals in CPQ</description>
        <label>CPQ Exclude Quote Totals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_CPQMultiplier__c</fullName>
        <description>Determines how CPQ will calculate out pricing &amp; costing in the QLE</description>
        <label>CPQ Multiplier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC Qty</fullName>
                </value>
                <value>
                    <fullName>Total AC Service Months</fullName>
                </value>
                <value>
                    <fullName>Total AC Service Years</fullName>
                </value>
                <value>
                    <fullName>Contracted Shipments</fullName>
                </value>
                <value>
                    <fullName>Quote Subscription Term</fullName>
                </value>
                <value>
                    <fullName>Annual Subscription Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_CPQPTSFilter__c</fullName>
        <formula>IF(ISPICKVAL( L2I_Category__c, &quot;PTS&quot;), &quot;PTS&quot;, &quot;Non-PTS&quot;)</formula>
        <label>CPQ PTS Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_CPQSearchFilterType__c</fullName>
        <description>Filters out product bundles respective to this PL field</description>
        <label>CPQ Search Filter Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>L2I_Advertising</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                    <isActive>false</isActive>
                    <label>Advertising</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Cumulative_Lead_Time__c</fullName>
        <label>Cumulative Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Customer_Order_Enabled_Flag__c</fullName>
        <label>Customer Order Enabled Flag</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Default_Shipping_Org__c</fullName>
        <label>Default Shipping Org</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Dependency_Info__c</fullName>
        <label>Dependency Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Dimension_Uom_Code__c</fullName>
        <label>Dimension Uom Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Dimensions_HEIGHT_HW__c</fullName>
        <label>Dimensions HEIGHT (HW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Dimensions_LENGTH_HW__c</fullName>
        <label>Dimensions LENGTH (HW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Dimensions_WIDTH_HW__c</fullName>
        <label>Dimensions WIDTH (HW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Drawing_Weight_HW__c</fullName>
        <label>Drawing Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Exclude_From_Orders__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this box is checked the Product cannot be ordered.</inlineHelpText>
        <label>Exclude From Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Feature_ID__c</fullName>
        <label>Feature ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Feature_Name__c</fullName>
        <label>Feature Name</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Fit_Type__c</fullName>
        <label>Fit Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Retrofit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Fulfillment_Flow__c</fullName>
        <label>Fulfillment Flow</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fulfillment_Flow</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Grouping__c</fullName>
        <label>Grouping</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_Grouping</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Has_Order_Rollup_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Order Rollup Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Inventory_Item_Id__c</fullName>
        <description>EBS Item Id</description>
        <externalId>true</externalId>
        <label>Inventory Item Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_Invoice_Trigger__c</fullName>
        <label>Invoice Trigger</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Is_Kit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Item_Post_Processing_Days__c</fullName>
        <description>This will store Item Post Processing Days</description>
        <label>Item Post Processing Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Item_Type__c</fullName>
        <label>Item Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Lead_Time__c</fullName>
        <label>Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Length__c</fullName>
        <description>Length</description>
        <label>Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Line_Type_ID__c</fullName>
        <label>Line Type ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_MTBF_HW__c</fullName>
        <label>MTBF (HW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Marketing_Description__c</fullName>
        <label>Marketing Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Mfg_Code__c</fullName>
        <label>Mfg Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Migrate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to determine if product will be moved to upper orgs.</description>
        <label>Migrate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Migration_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_Obsolescence__c</fullName>
        <label>Obsolescence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Obsolescence</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Offerability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offerability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Order_Type_Context__c</fullName>
        <label>Order Type Context</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Order_Type_ID__c</fullName>
        <label>Order Type ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_PACRevSharePerc__c</fullName>
        <label>PAC RevShare Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_PMO_Install_Code__c</fullName>
        <label>PMO Install Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMO_Install_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_PPL_Types__c</fullName>
        <label>PPL Types</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_P_L_Install_Code__c</fullName>
        <label>P&amp;L Install Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_P_L_Install_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Per_Aircraft_Proration__c</fullName>
        <description>Defines how per aircraft per month fees are treated</description>
        <label>Per Aircraft Proration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Power_Max_HW__c</fullName>
        <label>Power Dissipation (Max)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Power_Nominal_HW__c</fullName>
        <label>Power Dissipation (Nominal)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Price_List_ID__c</fullName>
        <label>Price List ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Primary_Charge_Method__c</fullName>
        <description>Charge method such as Per tail, per fleet or Media Set</description>
        <label>Primary Charge Method</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Primary_Unit_Code__c</fullName>
        <label>Primary Unit Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Primary_Unit__c</fullName>
        <description>Unit of Measurement such as centimeter or millimeter</description>
        <label>Primary Unit</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Product_Billable_MB__c</fullName>
        <description>Used for billing Boingo &amp; iPass Usage products</description>
        <label>Product Billable MB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_Product_Family</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Product_Lifecycle_HW__c</fullName>
        <label>Product Lifecycle (HW)</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Requires_Migrational_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Migrational Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Secondary_Charge_Method__c</fullName>
        <description>Secondary Charge method such as Charge Frequency such as One Time or Monthly etc.</description>
        <label>Secondary Charge Method</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Service_Activation_Type__c</fullName>
        <label>Service Activation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>DR</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>OneTime</fullName>
                </value>
                <value>
                    <fullName>Monthly-DR</fullName>
                    <isActive>false</isActive>
                    <label>Monthly-DR</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Sub_Category3__c</fullName>
        <label>Sub Category 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>L2I_Sub_Category_1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accessibility</fullName>
                </value>
                <value>
                    <fullName>Additional Capacity</fullName>
                </value>
                <value>
                    <fullName>Airside Logging SW (formerly PAXUS)</fullName>
                </value>
                <value>
                    <fullName>Application Integration Fee</fullName>
                </value>
                <value>
                    <fullName>AUDIO/VIDEO</fullName>
                </value>
                <value>
                    <fullName>Automated Media Content Activation</fullName>
                </value>
                <value>
                    <fullName>AVOD 1 0</fullName>
                </value>
                <value>
                    <fullName>AVOD 1 5</fullName>
                </value>
                <value>
                    <fullName>Bandwidth Options</fullName>
                </value>
                <value>
                    <fullName>Bluetooth Activation</fullName>
                </value>
                <value>
                    <fullName>Cell Modem Services</fullName>
                </value>
                <value>
                    <fullName>Channel Selection</fullName>
                </value>
                <value>
                    <fullName>CMS</fullName>
                </value>
                <value>
                    <fullName>Companion App</fullName>
                </value>
                <value>
                    <fullName>Connecting Gate</fullName>
                </value>
                <value>
                    <fullName>Content Load Tools</fullName>
                </value>
                <value>
                    <fullName>Content Processing Tools</fullName>
                </value>
                <value>
                    <fullName>Content Rating</fullName>
                </value>
                <value>
                    <fullName>Core Software</fullName>
                </value>
                <value>
                    <fullName>Credits</fullName>
                </value>
                <value>
                    <fullName>Crew Messaging - Crew to Passenger</fullName>
                </value>
                <value>
                    <fullName>Crew Msg - Air-To-Grnd and Grnd-To-Air</fullName>
                </value>
                <value>
                    <fullName>Customer Support Engineering Tools</fullName>
                </value>
                <value>
                    <fullName>Customer Support Services</fullName>
                </value>
                <value>
                    <fullName>Custom Software</fullName>
                </value>
                <value>
                    <fullName>DAES</fullName>
                </value>
                <value>
                    <fullName>Data Plan</fullName>
                </value>
                <value>
                    <fullName>Developer Program</fullName>
                </value>
                <value>
                    <fullName>DIGITAL MPES</fullName>
                </value>
                <value>
                    <fullName>DMPES Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Sub_Category_1__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>L2I_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>L2I_Sub_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Sub_Category_2__c</fullName>
        <label>Sub Category 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_Sub_Category_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_System_Type_Translation__c</fullName>
        <label>System Type Translation</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Temp_Cost_Type__c</fullName>
        <label>Temp Cost Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FOB Cost</fullName>
                </value>
                <value>
                    <fullName>OnePA Cost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Temp_Cost__c</fullName>
        <description>This is the field for Mulesoft Integration only.  Do not use.</description>
        <label>Temp Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_UOM__c</fullName>
        <label>Mediation UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_Mediation_UOM</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Usage_Type__c</fullName>
        <description>Populated for Connectivity usage products</description>
        <label>Usage Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passenger</fullName>
                </value>
                <value>
                    <fullName>Operational</fullName>
                </value>
                <value>
                    <fullName>Whitelist</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>iPass</fullName>
                </value>
                <value>
                    <fullName>Boingo</fullName>
                </value>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_VendorRevSharePerc__c</fullName>
        <label>Vendor RevShare Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_Vendor__c</fullName>
        <label>Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Vendor</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Visibility_Type__c</fullName>
        <label>Visibility Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Legacy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Weight_HW__c</fullName>
        <label>Target Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PL_Product_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Summary</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PL_MD__c.MD_Type__c</field>
                <operation>equals</operation>
                <value>Product Summary</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PL_MD__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Default_Shipping_Org_Id__c</fullName>
        <label>Default Shipping Org Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Kit_Current_Revision__c</fullName>
        <description>The current (highest) revision code for this kit part</description>
        <inlineHelpText>The current (highest) revision code for this kit part</inlineHelpText>
        <label>Kit Current Revision</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Product CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Lifecycle__c</fullName>
        <label>Product Lifecycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>End Of Life</fullName>
                </value>
                <value>
                    <fullName>Follow - On customers Only</fullName>
                </value>
                <value>
                    <fullName>Limited Repairs Only</fullName>
                </value>
                <value>
                    <fullName>Limited Spares and Repairs Only</fullName>
                </value>
                <value>
                    <fullName>Repair Only</fullName>
                </value>
                <value>
                    <fullName>Spares and Repairs Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Active_DSS_Products_Missing_Data</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5)</booleanFilter>
        <columns>L2I_Sub_Category_2__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>SBQQ__ChargeType__c</columns>
        <columns>L2I_Feature_ID__c</columns>
        <columns>L2I_Feature_Name__c</columns>
        <columns>L2I_Service_Activation_Type__c</columns>
        <columns>L2I_Per_Aircraft_Proration__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>L2I_Category__c</field>
            <operation>equals</operation>
            <value>DSS</value>
        </filters>
        <filters>
            <field>SBQQ__ChargeType__c</field>
            <operation>equals</operation>
            <value>Usage</value>
        </filters>
        <filters>
            <field>L2I_Service_Activation_Type__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>L2I_Per_Aircraft_Proration__c</field>
            <operation>equals</operation>
        </filters>
        <label>Active DSS Products Missing Data</label>
    </listViews>
    <listViews>
        <fullName>Aircraft_Service_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>L2I_CPQMultiplier__c</columns>
        <columns>L2I_Service_Activation_Type__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>SBQQ__ChargeType__c</columns>
        <columns>L2I_Sub_Category_2__c</columns>
        <columns>L2I_Sub_Category_1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>L2I_Migrate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Aircraft Service Products</label>
    </listViews>
</CustomObject>